feat: adding epoll examples

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -23,3 +23,4 @@ endfunction()
 create_target(main "src/main.cpp")
 create_target(hello_ucx "src/hello_ucx.cpp")
 create_target(hello_ucp "src/ucp_hello_world.c")
+create_target(hello_epoll "src/hello_epoll.c")
